--- a/Web/WebApplication2/Web.config
+++ b/Web/WebApplication2/Web.config
@@ -92,6 +92,7 @@
   <dataConfiguration defaultDatabase="DBConnection" />
   <connectionStrings>
     <add name="PortalDBContext" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MTS0091\SQLEXPRESS;initial catalog=MTSTrexProd;persist security info=True;user id=sa;password=sadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PortalDBEntities" connectionString="metadata=res://*/Models.DBModel.csdl|res://*/Models.DBModel.ssdl|res://*/Models.DBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MTS0088\SQLEXPRESS;initial catalog=MTSTrex;persist security info=True;user id=sa;password=sadmin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
