--- a/Web/TimeManagement/Web.config
+++ b/Web/TimeManagement/Web.config
@@ -111,7 +111,7 @@
     <membership>
       <providers>
         <clear />
-        <add name="CustomMembershipProvider" type="TimeManagment.Domain.CustomProviders.CustomMembershipProvider" connectionStringName="PortalDBContext" />
+        <add name="CustomMembershipProvider" type="TimeManagment.Domain.CustomProviders.CustomMembershipProvider" connectionStringName="PortalDBEntities" />
       </providers>
     </membership>
     <profile>
@@ -124,7 +124,7 @@
       <providers>
         <clear />
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
-        <add name="CustomRoleProvider" type="TimeManagment.Domain.CustomProviders.CustomRoleProvider" connectionStringName="PortalDBContext" />
+        <add name="CustomRoleProvider" type="TimeManagment.Domain.CustomProviders.CustomRoleProvider" connectionStringName="PortalDBEntities" />
       </providers>
     </roleManager>
     <pages>
