--- a/Web/TimeManagement/TimeManagement.csproj
+++ b/Web/TimeManagement/TimeManagement.csproj
@@ -228,6 +228,9 @@
     <Compile Include="Models\WorkCode.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\WorkCodeActivity.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\ActivityWiseModel.cs" />
     <Compile Include="ViewModel\BillingModel.cs" />
