--- a/NewService/ServiceDebugger/ServiceDebugger/App.config
+++ b/NewService/ServiceDebugger/ServiceDebugger/App.config
@@ -88,15 +88,14 @@
   </exceptionHandling>
   <dataConfiguration defaultDatabase="DBConnection" />
   <connectionStrings>
-    <add name="transflow" connectionString="Database=MtsTrexTest;Server=192.168.70.67;user id=sqladmin;password=5Qladmin"
-      providerName="System.Data.SqlClient" />
+    <add name="transflow" connectionString="Database=MtsTrexTest;Server=192.168.70.67;user id=sqladmin;password=5Qladmin" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key ="IsDebug" value ="false"/>
+    <add key="IsDebug" value="false" />
     <add key="AppConnectionName" value="transflow" />
-    <add key="EmailTemplateBaseUrl" value="https://mtshost.net/MtsTrexTest/email/"/>
+    <add key="EmailTemplateBaseUrl" value="https://mtshost.net/MtsTrexTest/email/" />
 
-    <add key="CommandTimeOut" value="300"/>
+    <add key="CommandTimeOut" value="300" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
